<resources>
    <string name="HOST">http://happ.westeurope.cloudapp.azure.com/</string>
    <string name="API_URL">api/v1/</string>
    <string name="facebook_app_id">1284244154932616</string>
    <string name="fb_login_protocol_scheme">fb1284244154932616</string>
    <string name="event_feeds_page_size">10</string>
    <string name="event_feeds_visible_treshold_for_loading_next_items">3</string>
    <string name="app_name">HAPP</string>
    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="event_title">Event Title</string>
    <string name="event_description">Description</string>
    <string name="event_min_price">Minimal Price</string>
    <string name="event_max_price">Maximal Price</string>
    <string name="event_place">Place</string>
    <string name="event_email">Email</string>
    <string name="event_website">Website</string>
    <string name="event_interest">Interest</string>
    <string name="pls_add_image">Please, add at least one image for this event</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">Finish Date</string>
    <string name="birthday">Birth Date</string>
    <string name="select_interest_title">Select Your Interests</string>
    <string name="cancel">Cancel</string>
    <string name="agree">Agree</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="repeat_password">Repeat password</string>
    <string name="new_password">New Password</string>
    <string name="sign_up_now">Sign up now</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="username">Username</string>
    <string name="sign_up">Sign up</string>
    <string name="dont_account">Do not have an account?</string>
    <string name="phone_number">Phone Number</string>
    <string name="event_done">Event Successfully Updated</string>
    <string name="user_done">User Settings Successfully Updated</string>
    <string name="event_done_action">CLOSE</string>
    <string name="delete_confirm_title">Delete Event</string>
    <string name="delete_confirm_description">Are you sure you want to delete this event? This action can not be undone.</string>
    <string name="create_event">Create Event</string>
    <string name="edit_event">Edit Event</string>
    <string name="action_settings">Settings</string>
    <string name="nav_item_attachment">Attachment</string>
    <string name="nav_item_images">Images</string>
    <string name="nav_item_location">My Location</string>
    <string name="nav_sub_menu">Sub Menu</string>
    <string name="nav_sub_menu_item01">Sub Menu Item 1</string>
    <string name="nav_sub_menu_item02">Sub Menu Item 2</string>
    <string name="drawer_header_text">Drawer Header</string>
    <string name="second_activity_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin consectetur diam id aliquam scelerisque. Donec ultrices lacus vel dignissim pharetra. Vivamus pharetra augue quis rhoncus placerat. Sed ultricies at risus non cursus. Nam rutrum leo nec placerat consectetur. Vestibulum feugiat eleifend diam, nec interdum augue tincidunt sit amet. Praesent feugiat est auctor lacus consectetur, vitae pellentesque dolor laoreet.</string>
    <string name="title_activity_second">SecondActivity</string>
    <string name="menu_filter">Filter Events</string>
    <string name="nav_item_feed">Feed</string>
    <string name="nav_item_interests">Interests</string>
    <string name="nav_item_organizer">Organizer Mode</string>
    <string name="nav_item_settings">Settings</string>
    <string name="nav_item_logout">Logout</string>
    <string name="nav_item_share">Tell About Happ</string>
    <string name="nav_version">Version </string>
    <string name="menu_edit">Edit</string>
    <string name="menu_hide">Hide</string>
    <string name="menu_delete">Delete</string>
    <string name="err_msg"> Error! </string>
    <string name="select_city_string">Select Your City</string>
    <string name="your_city_label">NOT SELECTED</string>
    <string name="city_name_label">Your City is</string>
    <string name="select_city_button">Select city</string>
    <string name="city_search">Find City... </string>
    <string name="organizer_title">Organizer Mode</string>
    <string name="user_settings">Profile Settings</string>
    <string name="did_upvote">You Like Event </string>
    <string name="did_downvote">You No Longer Like Event </string>
    <string name="did_fav">You Added Event </string>
    <string name="did_fav_2"> To Favorites</string>
    <string name="did_unfav">Your Removed Event </string>
    <string name="did_unfav_2"> From Favorites</string>
    <string name="changes_saved">Changes saved</string>
    <string name="undo">UNDO</string>
    <string name="filter_feed">Filter</string>
    <string name="only_free">Only Free Events</string>
    <string name="title_activity_welcome">Home Screen</string>
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>
    <string name="slide_1_title">Hello Food!</string>
    <string name="slide_1_desc">The easiest way to order food from your favourite restaurant!</string>
    <string name="slide_2_title">Movie Tickets</string>
    <string name="slide_2_desc">Book movie tickets for your family and friends!</string>
    <string name="slide_3_title">Great Discounts</string>
    <string name="slide_3_desc">Best discounts on every single service we offer!</string>
    <string name="slide_4_title">World Travel</string>
    <string name="slide_4_desc">Book tickets of any transportation and travel the world!</string>
    <string name="login_facebook">Login with Facebook</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="organizer_rules">Organizer rules</string>
    <string name="warning_for_empty_box_email">Leave field blank to use your profile email</string>
    <string name="warning_for_empty_box_phone">Leave field blank to use your profile phone number</string>
    <string name="event_date">Event Date</string>
    <string name="event_tickets_link">Tickets Link</string>
    <string name="event_phone">Phone</string>
    <string name="tap_here_description">Tap here to add description</string>
    <string name="explicit_content">Explicit Content</string>
    <string name="sub_text_explicit_content">Content appropriate only for age rate over 18</string>
    <string name="credit_info">© happapp.info 2016, All Rights Reserved</string>
    <string name="terms_and_policy"><![CDATA[Terms & Policy]]></string>
</resources>