<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_light">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/bg_light">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="24dp"
            android:paddingBottom="24dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_ec_website"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp">

                <EditText
                    android:id="@+id/input_ec_website"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:hint="@string/event_website"
                    android:textSize="16sp"
                    android:inputType="textNoSuggestions"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_ec_tickets_link"
                android:layout_below="@+id/input_layout_ec_website"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp">

                <EditText
                    android:id="@+id/input_ec_tickets_link"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:hint="@string/event_tickets_link"
                    android:textSize="16sp"
                    android:inputType="textNoSuggestions"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_ec_email"
                android:layout_below="@+id/input_layout_ec_tickets_link"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp">

                <EditText
                    android:id="@+id/input_ec_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:hint="@string/event_email"
                    android:textSize="16sp"
                    android:inputType="textNoSuggestions"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"
                    android:gravity="right"
                    android:textColor="@color/colorAccent183"
                    android:paddingRight="4dp"
                    android:text="@string/warning_for_empty_box_email"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_ec_phone"
                android:layout_below="@+id/input_layout_ec_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/input_ec_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:hint="@string/event_phone"
                    android:textSize="16sp"
                    android:inputType="textNoSuggestions"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"
                    android:gravity="right"
                    android:textColor="@color/colorAccent183"
                    android:paddingRight="4dp"
                    android:text="@string/warning_for_empty_box_phone"/>
            </android.support.design.widget.TextInputLayout>


            <RelativeLayout
                android:id="@+id/rl_ec_continuing_event"
                android:layout_below="@+id/input_layout_ec_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp">

                <TextView
                    android:id="@+id/tv_ec_continuing_event"
                    android:layout_toLeftOf="@+id/switch_ec_continuing"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:text="@string/explicit_content" />

                <TextView
                    android:layout_below="@+id/tv_ec_continuing_event"
                    android:layout_toLeftOf="@+id/switch_ec_continuing"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="2"
                    android:text="@string/sub_text_explicit_content"/>

                <android.support.v7.widget.SwitchCompat
                    android:id="@+id/switch_ec_continuing"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="16dp"/>

            </RelativeLayout>

        </RelativeLayout>
    </android.support.v4.widget.NestedScrollView>
</RelativeLayout>