<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/bg_light">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/bg_light">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingTop="24dp">

            <TextView
                android:id="@+id/tv_ec_event_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:text="@string/event_date"/>

            <ImageView
                android:id="@+id/iv_ec_edit_start_date"
                android:layout_below="@+id/tv_ec_event_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/ic_edit_compat"
                android:layout_alignParentRight="true"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="32dp" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_ec_startdate"
                android:layout_below="@+id/tv_ec_event_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toLeftOf="@+id/iv_ec_edit_start_date"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp">

                <EditText
                    android:id="@+id/input_ec_startdate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:hint="@string/start_date"
                    android:textSize="16sp"
                    android:inputType="textNoSuggestions"/>
            </android.support.design.widget.TextInputLayout>

            <ImageView
                android:id="@+id/iv_ec_edit_end_date"
                android:layout_below="@+id/input_layout_ec_startdate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/ic_edit_compat"
                android:layout_alignParentRight="true"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="24dp" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_ec_enddate"
                android:layout_toLeftOf="@+id/iv_ec_edit_end_date"
                android:layout_below="@+id/input_layout_ec_startdate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="8dp">

                <EditText
                    android:id="@+id/input_ec_enddate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:hint="@string/end_date"
                    android:textSize="16sp"
                    android:inputType="textNoSuggestions"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_ec_website"
                android:layout_below="@+id/input_layout_ec_enddate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginLeft="16dp">

                <EditText
                    android:id="@+id/input_ec_website"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:hint="@string/event_website"
                    android:textSize="16sp"
                    android:inputType="textNoSuggestions"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_ec_tickets_link"
                android:layout_below="@+id/input_layout_ec_website"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginLeft="16dp">

                <EditText
                    android:id="@+id/input_ec_tickets_link"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:hint="@string/event_tickets_link"
                    android:textSize="16sp"
                    android:inputType="textNoSuggestions"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_ec_email"
                android:layout_below="@+id/input_layout_ec_tickets_link"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginLeft="16dp">

                <EditText
                    android:id="@+id/input_ec_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:hint="@string/event_email"
                    android:textSize="16sp"
                    android:inputType="textNoSuggestions"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"
                    android:gravity="right"
                    android:textColor="@color/colorAccent183"
                    android:paddingRight="4dp"
                    android:text="@string/warning_for_empty_box_email"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_ec_phone"
                android:layout_below="@+id/input_layout_ec_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp">

                <EditText
                    android:id="@+id/input_ec_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:hint="@string/event_phone"
                    android:textSize="16sp"
                    android:inputType="textNoSuggestions"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"
                    android:gravity="right"
                    android:textColor="@color/colorAccent183"
                    android:paddingRight="4dp"
                    android:text="@string/warning_for_empty_box_phone"/>
            </android.support.design.widget.TextInputLayout>


            <RelativeLayout
                android:id="@+id/rl_ec_continuing_event"
                android:layout_below="@+id/input_layout_ec_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp">

                <TextView
                    android:id="@+id/tv_ec_continuing_event"
                    android:layout_toLeftOf="@+id/switch_ec_continuing"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="16dp"
                    android:textColor="@string/start" />
                <TextView
                    android:layout_below="@+id/tv_ec_continuing_event"
                    android:layout_toLeftOf="@+id/switch_ec_continuing"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="2"
                    android:lines="2"
                    android:text="New visitors can enter event even if it already started"/>

                <android.support.v7.widget.SwitchCompat
                    android:id="@+id/switch_ec_continuing"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"/>
            </RelativeLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_ec_description"
                android:layout_below="@+id/rl_ec_continuing_event"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp">

                <EditText
                    android:id="@+id/input_ec_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/event_description"
                    android:textSize="16sp"
                    android:inputType="textNoSuggestions"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:textSize="16sp"
                    android:text="@string/tap_here_description"/>
            </android.support.design.widget.TextInputLayout>

        </RelativeLayout>
    </android.support.v4.widget.NestedScrollView>
</RelativeLayout>